Script para rodar-testes + relatório + gráficos